--- a/Makefile.config
+++ b/Makefile.config
@@ -1,9 +1,9 @@
 #ASSIGNMENT=wp1p1
-ASSIGNMENT=wp1
-#ASSIGNMENT=wp2
+#ASSIGNMENT=wp1
+ASSIGNMENT=wp2
 #ASSIGNMENT=wp3
 #ASSIGNMENT=project
-TEAM_MEMBERS_CSV="Bhavesh Goyal(111482386)"
+TEAM_MEMBERS_CSV="bgoyal(111482386)"
 # list space-separated completed components: cooperative preemptive signals swap filesystem network multicore
 PROJECT_PARTS=cooperative signals
 PROJECT_POINTS=50
