--- a/Makefile.config
+++ b/Makefile.config
@@ -1,8 +1,8 @@
 #ASSIGNMENT=wp1p1
 #ASSIGNMENT=wp1
-ASSIGNMENT=wp2
+#ASSIGNMENT=wp2
 #ASSIGNMENT=wp3
-#ASSIGNMENT=project
+ASSIGNMENT=project
 TEAM_MEMBERS_CSV="bgoyal(111482386), Aman Agarwal (amaagarwal)"
 # list space-separated completed components: cooperative preemptive signals swap filesystem network multicore
 PROJECT_PARTS=cooperative signals
