--- a/Makefile.config
+++ b/Makefile.config
@@ -4,6 +4,6 @@
 #ASSIGNMENT=wp3
 ASSIGNMENT=project
 TEAM_MEMBERS_CSV="bgoyal(111482386), Aman Agarwal (amaagarwal)"
-# list space-separated completed components: cooperative preemptive signals swap filesystem network multicore
+# list space-separated completed components: cooperative
 PROJECT_PARTS=cooperative signals
 PROJECT_POINTS=50
